// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button it should render the default button when no props is declared 1`] = `
<div>
  <button
    class="css-tdfxln"
    data-test-id="button"
    type="button"
  >
    Default Button
    <canvas
      height="0"
      style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      width="0"
    />
  </button>
</div>
`;

exports[`Button it should render the primary button 1`] = `
<div>
  <button
    class="css-tdfxln"
    data-test-id="button"
    type="button"
  >
    Primary Button
    <canvas
      height="0"
      style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      width="0"
    />
  </button>
</div>
`;

exports[`Button it should render the secondary button 1`] = `
<div>
  <button
    class="css-exvprd"
    data-test-id="button"
    type="button"
  >
    Secondary Button
    <canvas
      height="0"
      style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      width="0"
    />
  </button>
</div>
`;
